Add google analytics

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     ></script>
     <title>Ezra Seminary</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YLL04XDWGB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YLL04XDWGB');
+</script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
